--- a/.gitmodules
+++ b/.gitmodules
@@ -6,4 +6,7 @@
 	url = https://github.com/starlight-traveler/nd-aimm-computer-auxiliary-one.git
 [submodule "nd-aimm-main-computer"]
 	path = nd-aimm-main-computer
-	url = https://github.com/starlight-traveler/nd-aimm.git
+	url = https://github.com/starlight-traveler/nd-aimm-main-computer.git
+[submodule "lib/flatbuffers"]
+	path = lib/flatbuffers
+	url = https://github.com/google/flatbuffers.git
