nd-aimm up to date

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,11 @@
 	path = nd-aimm-computer-auxiliary-one
 	url = https://github.com/starlight-traveler/nd-aimm-computer-auxiliary-one.git
 	branch = main
+[submodule "nd-aimm-main-computer"]
+	path = nd-aimm-main-computer
+	url = https://github.com/starlight-traveler/nd-aimm-main-computer.git
+	branch = main
+[submodule "nd-aimm-jupyter-notebooks"]
+	path = nd-aimm-jupyter-notebooks
+	url = https://github.com/starlight-traveler/nd-aimm-jupyter-notebooks.git
+	branch = main
