--- a/.gitmodules
+++ b/.gitmodules
@@ -30,5 +30,5 @@
         path = nd-aimm-startup-emergency-computer
         url = https://github.com/starlight-traveler/nd-aimm-startup-emergency-computer.git
 [submodule "nd-aimm-master-control"]
-        path = nd-aimm-startup-emergency-computer
+        path = nd-aimm-master-control
         url = https://github.com/starlight-traveler/nd-aimm-master-control.git
